# claudecodex

./: CLAUDE.md  README.md  generate_thumbnail.py  pyproject.toml  requirements.txt
.claude/: settings.json
.github/workflows/: ci.yml
src/claudecodex/: __init__.py  backend.py  bedrock.py  copilot.py  copilot_provider.py  council.py  dashboard.py  logging_config.py  main.py  models.py  openai_compatible.py  provider.py  registry.py  server.py
tests/e2e/: test_provider_matrix.py
tests/integration/: test_bedrock_integration.py  test_gemini_integration.py
tests/unit/: test_api_endpoints.py  test_bedrock_streaming.py  test_model_switching.py  test_openai_compatible.py
