[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claudecodex"
version = "1.0.0"
authors = [
    {name = "Marri Naresh", email = "msg4naresh@gmail.com"}
]
description = "A hackable Claude API proxy for monitoring AI agent requests and connecting multiple LLM providers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["claude", "api", "proxy", "llm", "ai", "bedrock", "openai", "anthropic", "fastapi"]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/msg4naresh/claudecodex"
Repository = "https://github.com/msg4naresh/claudecodex"
Issues = "https://github.com/msg4naresh/claudecodex/issues"
Documentation = "https://github.com/msg4naresh/claudecodex#readme"

[project.scripts]
claudecodex = "claudecodex.main:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-config",
    "--strict-markers",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]